# cslibs_image_align

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  package.xml  package.xml~
cmake/: cslibs_image_align_extras.cmake
include/cslibs_image_align/: blockreg.h  imagereg.h  utils_image.h  utils_simd.h
test/: example.cpp  test.cpp
