<?xml version="1.0"?>
<package format="2">
  <name>cslibs_image_align</name>
  <version>0.1.0</version>
  <description>
    The cslibs_image_align package contains a optimized implementation of the efficient second order minimization and inverse compositional image alignment methods.
  </description>

  <author email="julian.jordan@uni-tuebingen.de">Julian Jordan</author>
  <maintainer email="julian.jordan@uni-tuebingen.de">Julian Jordan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
